--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 header {
 
-    background-color: rgb(151, 250, 250);
+    background-color: rgba(49,96,224,255);
     height: 100px;
     display: flex;
     justify-content: center;
@@ -16,14 +16,14 @@ header {
 }
 
 .container {
-    background-color: rgb(255, 174, 24);
-    height: 70px;
+    /* background-color: rgb(255, 174, 24); */
+    /* height: 70px; */
     width: 75%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 10px;
-    border: dashed black 3px;
+    /* border: dashed black 3px; */
     align-items: center;
     
   
@@ -31,18 +31,41 @@ header {
     
 }
 
-a{
-    text-decoration: none;
-    font-size: 20px;
+#div1-button {
+
+    display: flex;
+    
     
 }
 
+#rounded-button1 {
+
+    background-color: white;
+    color: black;
+    height: 40px;
+    width: 70px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+
+
 /* main */
 
-.main-div1{
 
-    background-color: rgb(7, 0, 109);
-    height: 300px;
+.main-div1{
+    
+
+    background-image: url(../img/jumbo.png);
+    background-size: 80%;
+    background-size: cover;
+    
+    
+    height: 450px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -51,13 +74,70 @@ a{
     padding-left: 280px;
 }
 
+
+
 .div-container1 {
 
     background-color: rgb(247, 143, 214);
     height: 250px;
     width: 100%;
     border: dashed black 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    color: white;
     
+}
+#button-1 {
+
+    background-color: white;
+    color: black;
+    height: 40px;
+    width: 150px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+
+}
+
+#black-button{
+
+    background-color: rgb(0, 0, 0);
+    color: white;
+    height: 40px;
+    width: 200px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+
+}
+
+
+
+
+a{
+    text-decoration: none;
+    font-size: 20px;
+    padding: 15px;
+    color: white;
+    
+}
+
+h1{
+
+    font-size: 50px;
+}
+
+p{
+
+    font-size: 20px;
 }
  /* seconda parte  */
 .main-div2 {
