--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,9 @@ h1{
 
 h2 {
 
-    font-size: 45px
+    font-size: 45px;
+    padding: 15px;
+    
 }
 
 p{
@@ -194,7 +196,7 @@ p{
 
 .main-div3 {
 
-    background-color: rgb(195, 195, 195);
+    background-color: rgb(239, 239, 239);
     height: 400px;
     display: flex;
     flex-direction: row;
@@ -226,8 +228,8 @@ p{
 
 .main-div4 {
 
-    background-color: rgb(195, 195, 195);
-    height: 600px;
+    background-color: rgb(239, 239, 239);
+    height: 900px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -239,12 +241,48 @@ p{
 
 .div-container4 {
 
-    background-color: rgb(15, 137, 56);
-    height: 500px;
+    background-color: rgb(14, 176, 68);
+    height: 800px;
     width: 100%;
     border: dashed black 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
+
+#div-container4 {
+
+    
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+    
+
+}
+
+
+#button-2 {
+
+    background-color: rgb(165, 116, 177);
+    color: white;
+    height: 90px;
+    width: 150px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    margin: 20px;
+    background-color: rgb(209, 142, 246);
+
+}
+
+
+
 
 .main-div5 {
 
