--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ h1{
 h2 {
 
     font-size: 45px;
-    padding: 15px;
+    
     
 }
 
@@ -165,10 +165,10 @@ p{
 
 .div-container2 {
 
-    background-color: rgb(47, 122, 220);
+    /* background-color: rgb(47, 122, 220); */
     height: 350px;
     width: 100%;
-    border: dashed black 2px;
+    /* border: dashed black 2px; */
     
 }
 
@@ -179,10 +179,10 @@ p{
 }
 .div-container2-1 {
 
-    background-color: rgb(249, 152, 158);
+    /* background-color: rgb(249, 152, 158); */
     height: 350px;
     width: 70%;
-    border: dashed black 2px;
+    /* border: dashed black 2px; */
     display: flex;
     /* align-items: center; */
     justify-content: space-around;
@@ -208,18 +208,18 @@ p{
 
 .div-container3 {
 
-    background-color: rgb(47, 122, 220);
+    /* background-color: rgb(47, 122, 220); */
     height: 350px;
     width: 70%;
-    border: dashed black 2px;
+    /* border: dashed black 2px; */
 
 }
 .div-container3-1 {
 
-    background-color: rgb(249, 152, 158);
+    /* background-color: rgb(249, 152, 158); */
     height: 350px;
     width: 100%;
-    border: dashed black 2px;
+    /* border: dashed black 2px; */
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -229,7 +229,7 @@ p{
 .main-div4 {
 
     background-color: rgb(239, 239, 239);
-    height: 900px;
+    height: 1100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -241,10 +241,10 @@ p{
 
 .div-container4 {
 
-    background-color: rgb(14, 176, 68);
-    height: 800px;
+    /* background-color: rgb(14, 176, 68); */
+    height: 100%;
     width: 100%;
-    border: dashed black 2px;
+    /* border: dashed black 2px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -257,8 +257,8 @@ p{
     
     display: flex;
     flex-direction: column;
-    
     align-items: center;
+    
     
 
 }
@@ -299,24 +299,25 @@ p{
 
 .div-container5{
 
-    background-color: rgb(249, 152, 158);
+    /* background-color: rgb(249, 152, 158); */
     height: 400px;
     width: 100%;
-    border: dashed rgb(0, 0, 0) 2px;
-
+    /* border: dashed rgb(0, 0, 0) 2px; */
     
     
-
-
-
 }
+
+
+   
+
 
 .div-container5-1 {
 
-    background-color: rgb(75, 155, 176);
+    /* background-color: rgb(75, 155, 176); */
     height: 400px;
     width: 50%;
-    border: dashed rgb(255, 255, 255) 2px;
+    /* border: dashed rgb(255, 255, 255) 2px; */
+    
 
         
     
@@ -331,6 +332,7 @@ h3 {
 nav {
 
     padding-bottom: 10px;
+    color: white;
 }
 
 
@@ -349,13 +351,13 @@ nav {
 
 .container-footer {
 
-    background-color: rgb(28, 233, 220);
+    /* background-color: rgb(28, 233, 220); */
     height: 70px;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: dashed black 3px;
+    /* border: dashed black 3px; */
     align-items: center;
     
     
@@ -364,10 +366,22 @@ nav {
 
 .nav-footer {
 
-    border: 1px black solid;
-    background-color: rgb(240, 190, 190);
+    /* border: 1px black solid;
+    background-color: rgb(233, 142, 249); */
     height: 50%;
+    
 
+    
+}
+
+#purple-rounded-button {
+
+    background-color: rgb(152, 62, 237);
+    width: 8%;
+    border-radius: 30%;
+    
+    
+    text-align: center;
     
 }
 
